# acur101_ps_linux_me

./: .gitlab-ci.yml  README.md
app/: CMakeLists.txt  README.txt
app/conf/lmx2492/: wave-1.txt  wave-2.txt  wave-3.txt
app/src/: CMakeLists.txt  main.c
app/src/app/: CMakeLists.txt
app/src/app/C2_order/: CMakeLists.txt  track_order.c  track_order.h  wave_order.c  wave_order.h
app/src/app/DataPath/: CMakeLists.txt  data_path.c  data_path.c.printf  data_path.h
app/src/app/Detection/: CMakeLists.txt  detection_cfar_2d.c  detection_cfar_2d.h  detection_dummy.c  detection_dummy.h  detection_interface.c  detection_interface.h  rdmDummyData_1target.txt  rdmDummyData_20target.txt  rdmDummyData_3target_10frame.txt
app/src/app/DevInfoProcess/: CMakeLists.txt  DevInfoProcess.c  DevInfoProcess.h
app/src/app/Tracking/: CMakeLists.txt  tracking_interface.c  tracking_interface.h
app/src/app/Tracking/src/: CMakeLists.txt
app/src/app/Wave_Configuration/: CMakeLists.txt  wave_config.c  wave_config.h  wave_parameter.c  wave_parameter.h
app/src/app/beam_calculate/: CMakeLists.txt  biaoding_data_process.c  biaoding_data_process.h  bk_cal.c  bk_cal.h
app/src/app/c2_network/: c2_network.c
app/src/app/pil/: CMakeLists.txt  pil.c  pil.h
app/src/app/sys_data/: CMakeLists.txt  sys_data.c  sys_data.h
app/src/app/temp_table/: CMakeLists.txt  temp_table.c  temp_table.h
app/src/app/temp_table/config/: readme.txt
app/src/bsp/: CMakeLists.txt
app/src/bsp/reg/: CMakeLists.txt  pl_reg.c  pl_reg.h
app/src/cfg/: radar_config.h
app/src/common/: CMakeLists.txt
app/src/common/sflog/: readme.txt  sflog.h
app/src/common/table_2d/: CMakeLists.txt  file_to_2d_table.c  readme.txt  table_2d.h
app/src/drv/: CMakeLists.txt
app/src/drv/awmf_0165/: CMakeLists.txt  awmf_0165_chip.c  awmf_0165_chip.h  awmf_0165_def.h  awmf_0165_drv.c  awmf_0165_drv.h  awmf_0165_io.c  awmf_0165_io.h
app/src/drv/chc2442_drv/: CMakeLists.txt  chc2442_assert.h  chc2442_common.h  chc2442_communication.c  chc2442_communication.h  chc2442_spi_hal.c  chc2442_spi_hal.h
app/src/drv/gps/: CMakeLists.txt  gps_dev.c  gps_dev.h
app/src/drv/gyro/: CMakeLists.txt  gyro_uart.c  gyro_uart.h
app/src/drv/lmx2492_drv/: CMakeLists.txt  lmx2492_assert.h  lmx2492_common.h  lmx2492_communication.c  lmx2492_communication.h  lmx2492_spi_hal.c  lmx2492_spi_hal.h
app/src/drv/lsm303ah/: CMakeLists.txt  lsm303ah_dev.c  lsm303ah_dev.h
app/src/drv/uart/: CMakeLists.txt  common_uart.c  common_uart.h
app/src/hal/: CMakeLists.txt
app/src/hal/chc2442_hal/: CMakeLists.txt  chc2442_config.c  chc2442_config.h
app/src/hal/led/: CMakeLists.txt  led.c  led.h
app/src/hal/lmx2492_hal/: CMakeLists.txt  lmx2492_config_register.c  lmx2492_config_register.h  lmx2492_divider_config.c  lmx2492_divider_config.h  lmx2492_individual_ramp_config.c  lmx2492_individual_ramp_config.h  lmx2492_ld_cpm_config.c  lmx2492_ld_cpm_config.h  lmx2492_mux_pin_config.c  lmx2492_mux_pin_config.h  lmx2492_power_config.c  lmx2492_power_config.h  lmx2492_ramp_config.c  lmx2492_ramp_config.h  lmx2492_speed_up_config.c  lmx2492_speed_up_config.h
app/src/inc/: acur100_interface.h  radar_common.h  radar_defines.h
app/src/service/: CMakeLists.txt  service.c  service.h
app/src/service/connect/: connect.h
app/src/service/connect/autolink/: connect_autolink.c
app/src/service/connect/socket/: connect_socket.c
app/src/service/control/: control.h
app/src/service/control/cli/: control_cli.c
app/src/service/datapath/: datapath.h
app/src/service/datapath/beam/: datapath_beam.c
app/src/service/monitor/: CMakeLists.txt  monitor.c  monitor.h
app/src/service/monitor/network/: CMakeLists.txt  network_monitor.c  (+1 more)
app/src/service/platfrom/: CMakeLists.txt  platfrom.c  platfrom.h
app/src/service/protocol/: procotol.h
app/src/service/sfbus/: CMakeLists.txt  sfbus.c  sfbus.h
app/src/service/storage/: CMakeLists.txt  storage.c
app/src/service/sysport/: CMakeLists.txt  sysport.c
app/src/srv/: CMakeLists.txt
app/src/srv/alink/: alink.c  alink.h  alink_defines.h
app/src/srv/cli/: BasicSocketCommandServer.c  CMakeLists.txt  FreeRTOS_CLI.c  FreeRTOS_CLI.h  Sample-CLI-commands.c  cli_if.h
app/src/srv/eth_link/: CMakeLists.txt  eth_link.c  eth_link.h
app/src/srv/flash_nv/: CMakeLists.txt  flash_raw.c  flash_raw.h
app/src/srv/log/: log.c  log.h
app/src/srv/net_cfg/: CMakeLists.txt  net_cfg.c  net_cfg.h
app/src/srv/pl_test/: CMakeLists.txt  pl_test.c  pl_test.h
app/src/srv/protocol/: CMakeLists.txt  protocol_ack.c  protocol_ack.h  protocol_common.c  protocol_common.h  protocol_crc.c  protocol_crc.h  protocol_dbgdat.c  protocol_dbgdat.h  protocol_general.c  protocol_general.h  protocol_if.c  protocol_object.c  protocol_object.h  protocol_parameter.c  protocol_parameter.h  protocol_system.c  protocol_system.h
app/src/srv/record/: CMakeLists.txt  record.c  record.h
app/src/srv/version/: CMakeLists.txt  version.c  version.h
app/src/srv/wit/: CMakeLists.txt  wit_service.c  wit_service.h
app/src/test/: CMakeLists.txt
app/src/test/stub/: CMakeLists.txt  stub_code.c  stub_code.h
app/src/test/ut/: CMakeLists.txt  unit_test.c  ut_0165_drv.c  ut_0165_drv.h  ut_adc_test.c  ut_adc_test.h  ut_alg_para_config_test.c  ut_alg_para_config_test.h  ut_ant_test.c  ut_ant_test.h  ut_cfg_param.c  ut_cfg_param.h  ut_chn_ctrl.c  ut_chn_ctrl.h  ut_datapath_test.c  ut_gyro_test.c  ut_gyro_test.h  ut_lsm303ah_test.c  ut_lsm303ah_test.h  ut_net_cfg.c  ut_net_cfg.h  ut_perf.c  ut_perf.h  ut_pl_test.c  ut_pl_test.h  ut_platform_info_test.c  ut_platform_info_test.h  ut_power_dissipation.c  ut_power_dissipation.h  ut_protocol.c  ut_soc.c  ut_soc.h  ut_sys_ctrl.c  ut_track_test.c  ut_track_test.h  ut_version.c  ut_version.h  ut_wit_test.c  ut_wit_test.h
(+336 files in other folders)
